fix: update 2 column cards on mobile

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -131,6 +131,8 @@
 
 .cards.size-2 {
   > ul {
-    grid-template-columns: repeat(2, 1fr);
+    @media (width >=1024px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 }
